--- a/templates/layout.html
+++ b/templates/layout.html
@@ -44,7 +44,7 @@
 
 
 
-</p><p style="font-size:120%;">Здесь еще что-то напишем, ссылку на гитхаб допустим
+	  </p><p style="font-size:120%;"><i>Исходный код проекта - https://github.com/AzamatGainullin/commentskernel_prod.git</i>
  </p> </div>
   <div style="float: right; width: 49%;">{% block content %}{% endblock %}  </div><div class="clear">
  </body>
